fixing layout problems

--- a/src/less/_site-components.less
+++ b/src/less/_site-components.less
@@ -17,6 +17,7 @@
 }
 
 .button-wrapper {
+  margin-top: 1.5rem;
   .button {
     margin-right: 0;
     margin-bottom: 0.5rem;
