--- a/src/less/_site-global-variables.less
+++ b/src/less/_site-global-variables.less
@@ -6,7 +6,7 @@
 @desktop-styles-min: 980px;
 @content-container-side-padding: 5%;
 @content-container-top-and-bottom-padding: 5rem;
-@text-max-width: 840px;
+@text-max-width: 700px;
 
 // Families
 // --------------------------
