--- a/src/less/acf-blocks/_hero.less
+++ b/src/less/acf-blocks/_hero.less
@@ -13,12 +13,14 @@
   position: relative;
   &__content-wrapper {
     max-width: 1140px;
+    margin: 0 auto;
   }
   &__content {
     max-width: 38em;
     color: @site-color-white;
     position: relative;
     z-index: 1;
+    text-align: center;
   }
   &__text {
     font-size: 3.75rem;
