--- a/src/less/templates/_posts.less
+++ b/src/less/templates/_posts.less
@@ -2,8 +2,6 @@
   article {
     padding: 2.5rem 0;
     border-bottom: 1px solid #eee;
-    max-width: @text-max-width;
-    margin: 0 auto;
     h2 {
       margin-top: 0;
       margin-bottom: 0.5rem;
